--- a/src/index.css
+++ b/src/index.css
@@ -92,3 +92,14 @@ body {
   overflow: hidden;
   box-sizing: border-box;
 }
+
+.banner {
+  position: absolute;
+  bottom: -1000px;
+  right: 0;
+  transition: bottom 5s;
+}
+
+.banner.visible {
+  top: 220px;
+}
