--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+
 html,
 div,
 span,
@@ -87,19 +89,51 @@ video {
 }
 
 body {
+  font-family: Roboto;
   margin: 0;
   padding: 0;
   overflow: hidden;
   box-sizing: border-box;
 }
 
-.banner {
-  position: absolute;
-  bottom: -1000px;
-  right: 0;
-  transition: bottom 5s;
+.keyboard {
+  background-color: transparent;
+  border-radius: 2px;
+  width: 284px;
+  height: 238px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  justify-content: center;
+  align-content: flex-end;
+  gap: 10px;
 }
 
-.banner.visible {
-  top: 220px;
+.key {
+  text-align: center;
+  width: 88px;
+  height: 52px;
+  background-color: transparent;
+  border: 2px solid black;
+  color: #000;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  outline: none;
+}
+
+.backspace {
+  width: 186px;
+}
+
+.input-mask {
+  width: 260px;
+  height: 38px;
+  background-color: transparent;
+  margin-bottom: 13px;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 37px;
+  border: none;
+  outline: none;
 }
